feat: add test utility method and apply phon number